fix[index]: Hide the scrollbar.

--- a/resources/assets/styles.css
+++ b/resources/assets/styles.css
@@ -7,6 +7,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    scrollbar-width: none; /* Hide scrollbar */
 }
 
 /* Style du corps de la page */
